--- a/MC1 Test/index.html
+++ b/MC1 Test/index.html
@@ -13,11 +13,18 @@
 </head>
 
 <body width = "1600" height = "1600">
-<h1 id="hello">
-	Hello
-</h1>
-<div id="resume_chart">
+
+<div id="resume_filter">
+    <h1 id="hello">
+        Hello
+    </h1>
+    <input id="submit_button" class="button" type="button" value="submit filter"/>
+    <input id="undo_button" class="button" type="button" value="undo"/>
+    <input id="redo_button" class="button" type="button" value="redo"/>
+    <!--<input id="hide_name_button" type="button" class="button" value="hide name"/>-->
 </div>
+<div id="resume_chart"></div>
+
 
 <div id="text_board">
 <table id="text_table" class="display" cellspacing="0" width="100%"></table>
