--- a/MC1 Test/index.html
+++ b/MC1 Test/index.html
@@ -21,6 +21,13 @@
     <input id="submit_button" class="button" type="button" value="submit filter"/>
     <input id="undo_button" class="button" type="button" value="undo"/>
     <input id="redo_button" class="button" type="button" value="redo"/>
+
+    <select id="auto_query" name=""> 
+        <option value="0" selected="selected">--Select Auto Selection--</option> 
+        <option value="1">Disable auto selection</option>
+        <option value="2">By location</option> 
+        <option value="3">By title</option>
+    </select> 
     <!--<input id="hide_name_button" type="button" class="button" value="hide name"/>-->
 </div>
 <div id="resume_chart"></div>
