Integrated with timeline

--- a/MC1 Test/index.html
+++ b/MC1 Test/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/resume.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery.dataTables.css"/>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/newsline.css"/>
+
 	<script src="javascripts/D3/d3.v3.js"></script>
 	<script src="javascripts/jquery-2.1.0.js"></script>
 	<script src="javascripts/jquery.dataTables.min.js"></script>
@@ -36,8 +39,10 @@
 <div id="text_board">
 <table id="text_table" class="display" cellspacing="0" width="100%"></table>
 </div>
-
 </body>
 
 <script src="javascripts/C_resume.js"></script>
+<script type="text/javascript" src="javascripts/newsline/colorLabel.js"></script>
+<script type="text/javascript" src="javascripts/newsline/DataManager.js"></script>
+<script type="text/javascript" src="javascripts/newsline/CanvasManager.js"></script>
 </html>
