--- a/MC1 Main/index.html
+++ b/MC1 Main/index.html
@@ -30,7 +30,9 @@
         <option value="1">Disable auto selection</option>
         <option value="2">By location</option> 
         <option value="3">By title</option>
-    </select> 
+    </select>
+    <label>
+    <input id="enable_drag" type="checkbox" checked/>Enable Drag
     <!--<input id="hide_name_button" type="button" class="button" value="hide name"/>-->
 </div>
 <div id="resume_chart"></div>
